[gd_scene load_steps=10 format=3 uid="uid://c6nuieoaf3eis"]

[ext_resource type="Script" path="res://samples/godot_whisper/sample_setup.gd" id="1_yg1jb"]
[ext_resource type="AudioStream" uid="uid://cuybt83bwegoq" path="res://samples/godot_whisper/jfk.wav" id="2_1h00v"]
[ext_resource type="Script" path="res://samples/godot_whisper/test_display.gd" id="3_ex4db"]
[ext_resource type="Script" path="res://samples/godot_whisper/StartButton.gd" id="4_kxndb"]
[ext_resource type="Script" path="res://addons/godot_whisper/label_transcribe.gd" id="4_prqad"]
[ext_resource type="Script" path="res://samples/godot_whisper/enable_mic.gd" id="5_fece8"]
[ext_resource type="WhisperResource" path="res://addons/godot_whisper/models/gglm-tiny.en.bin" id="6_5l644"]
[ext_resource type="Script" path="res://addons/godot_whisper/capture_stream_to_text.gd" id="7_blsvl"]

[sub_resource type="AudioStreamMicrophone" id="AudioStreamMicrophone_rhq81"]

[node name="CaptureStreamToText2" type="VBoxContainer"]
anchors_preset = 8
anchor_left = 0.5
anchor_top = 0.5
anchor_right = 0.5
anchor_bottom = 0.5
offset_left = -200.0
offset_top = -219.5
offset_right = 200.0
offset_bottom = 219.5
grow_horizontal = 2
grow_vertical = 2
script = ExtResource("1_yg1jb")

[node name="MicPlayer" type="AudioStreamPlayer" parent="."]
stream = SubResource("AudioStreamMicrophone_rhq81")
volume_db = -5.0

[node name="AudioPlayer" type="AudioStreamPlayer" parent="."]
stream = ExtResource("2_1h00v")
volume_db = -7.0
autoplay = true

[node name="Panel" type="Panel" parent="."]
custom_minimum_size = Vector2(400, 400)
layout_mode = 2

[node name="Label" type="RichTextLabel" parent="Panel"]
layout_mode = 0
offset_right = 675.0
offset_bottom = 397.0
script = ExtResource("4_prqad")

[node name="Label_og" type="RichTextLabel" parent="Panel"]
visible = false
custom_minimum_size = Vector2(400, 400)
layout_mode = 1
anchors_preset = 15
anchor_right = 1.0
anchor_bottom = 1.0
grow_horizontal = 2
grow_vertical = 2
size_flags_horizontal = 4
bbcode_enabled = true
text = "Time: 0s
Time to process: 0s
..."
script = ExtResource("3_ex4db")

[node name="Label" type="RichTextLabel" parent="."]
layout_mode = 2
text = "Add a language model or download one. Then, set it as language_model.
Takes sample every 5s and transcribes below."

[node name="HBoxContainer" type="HBoxContainer" parent="."]
layout_mode = 2

[node name="CheckBox" type="CheckBox" parent="HBoxContainer"]
layout_mode = 2
button_pressed = true
text = "Running"
script = ExtResource("4_kxndb")

[node name="MicToggle" type="CheckBox" parent="HBoxContainer"]
layout_mode = 2
text = "Mic"
script = ExtResource("5_fece8")

[node name="Label" type="Label" parent="HBoxContainer"]
layout_mode = 2
text = "Enable Microphone in Project Settings -> audio/driver/enable_input"

[node name="CaptureStreamToText" type="SpeechToText" parent="."]
language_model = ExtResource("6_5l644")
script = ExtResource("7_blsvl")
transcribe_interval = 0.2
minimum_sentence_time = 1
maximum_sentence_time = 10

[connection signal="updated" from="Panel/Label" to="." method="_on_rich_text_label_updated"]
[connection signal="toggled" from="HBoxContainer/MicToggle" to="HBoxContainer/MicToggle" method="_on_toggled"]
[connection signal="transcribed" from="CaptureStreamToText" to="." method="_on_capture_stream_to_text_transcribed"]
